c/src/test/resources/c/mini_bnc/invalid/mergePathType_false-valid-assert.c
#include "../../../reserved.h"

int main(){
	int flag1,flag2;
	
	if ( flag2 -flag1 <= 0 ) {
		if (flag1 + flag2 < 1){
			int y9 = 4;
		}
	}
	ASSERT(1==0);
	return 1;
}